# SHGNN

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_AUDIT_REPORT.md  DEPENDENCY_ELIMINATION_IMPLEMENTATION.md  DEPENDENCY_OPTIMIZATION_IMPLEMENTATION.md  HYPERGRAPH_MODULARIZATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  README.md  README_Installation.md  ZERO_DEPENDENCY_REFACTORING_PLAN.md  colab_install.py  requirements.txt  setup.py
.github/workflows/: build-wheels.yml  ci.yml  release.yml
crates/shnn-async/: Cargo.toml
crates/shnn-async-runtime/: Cargo.toml
crates/shnn-async-runtime/src/: executor.rs  lib.rs  lock_free.rs  runtime.rs  scheduler.rs  sync.rs  task.rs  timer.rs  waker.rs
crates/shnn-async-runtime/tests/: runtime_tests.rs
crates/shnn-async/src/: channels.rs  distributed.rs  error.rs  lib.rs  load_balancing.rs  monitoring.rs  network.rs  runtime.rs  scheduling.rs  streaming.rs
crates/shnn-async/tests/: integration.rs
crates/shnn-bench/: Cargo.toml  benchmark_report.md
crates/shnn-bench/src/: async_runtime.rs  compilation.rs  lib.rs  main.rs  math.rs  memory.rs  neuromorphic.rs
crates/shnn-bench/tests/: integration.rs
crates/shnn-core/: Cargo.toml
crates/shnn-core/src/: async_processing.rs  encoding.rs  error.rs  hypergraph.rs  lib.rs  math.rs  memory.rs  neuron.rs  plasticity.rs  serialization.rs  spike.rs  test_helpers.rs  time.rs
crates/shnn-core/tests/: integration.rs
crates/shnn-embedded/: Cargo.toml
crates/shnn-embedded/src/: embedded_memory.rs  embedded_network.rs  embedded_neuron.rs  error.rs  fixed_point.rs  hal.rs  lib.rs  rtic_support.rs
crates/shnn-embedded/tests/: integration.rs
crates/shnn-ffi/: Cargo.toml
crates/shnn-ffi/src/: error.rs  hardware.rs  lib.rs  profiling.rs  types.rs  utils.rs
crates/shnn-ffi/tests/: integration.rs
crates/shnn-lockfree/: Cargo.toml
crates/shnn-lockfree/src/: atomic.rs  epoch.rs  lib.rs  ordering.rs  queue.rs  stack.rs
crates/shnn-lockfree/tests/: lockfree_tests.rs
crates/shnn-math/: Cargo.toml
crates/shnn-math/src/: activation.rs  approx.rs  lib.rs  math.rs  matrix.rs  simd.rs  sparse.rs  stats.rs  vector.rs
crates/shnn-math/tests/: math_tests.rs
crates/shnn-python/: Cargo.toml
crates/shnn-python/src/: accelerator.rs  lib.rs  network.rs  neuron.rs  numpy_support.rs  plasticity.rs  spike.rs  utils.rs  visualization.rs
crates/shnn-python/tests/: integration.py
crates/shnn-serialize/: Cargo.toml
crates/shnn-serialize/src/: binary.rs  buffer.rs  endian.rs  lib.rs  neural.rs  proto.rs  traits.rs  utils.rs
crates/shnn-serialize/tests/: serialize_tests.rs
crates/shnn-wasm/: Cargo.toml
crates/shnn-wasm/src/: lib.rs
crates/shnn-wasm/tests/: integration.rs
docs/: README.md
docs/architecture/: README.md
docs/getting-started/: README.md
examples/: README.md
examples/basic/simple-network/: Cargo.toml
examples/basic/simple-network/src/: main.rs
python/shnn/: __init__.py  utils.py
tests/: integration_tests.rs
tutorials/: SHNN_MNIST_Complete.ipynb  SHNN_MNIST_QuickStart.ipynb  SHNN_MNIST_Rust.ipynb  SHNN_MNIST_Updated.ipynb
