[workspace]
resolver = "2"
members = [
    "crates/shnn-core",
    "crates/shnn-async",
    "crates/shnn-async-runtime",
    "crates/shnn-math",
    "crates/shnn-lockfree",
    "crates/shnn-serialize",
    "crates/shnn-wasm",
    "crates/shnn-embedded",
    "crates/shnn-ffi",
    "crates/shnn-python",
    "crates/shnn-bench",
    "examples/basic/simple-network"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SHGNN Development Team <team@shgnn.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/shgnn/shgnn"
homepage = "https://shgnn.org"
documentation = "https://docs.rs/shgnn"
keywords = ["neuromorphic", "spiking", "neural-networks", "hypergraph", "rust"]
categories = ["science", "algorithms", "embedded", "wasm"]
description = "A high-performance Spiking Hypergraph Neural Network implementation in Rust"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
crossbeam = "0.8"
parking_lot = "0.12"
smallvec = { version = "1.10", features = ["serde"] }
heapless = "0.8"
nb = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rmp-serde = "1.1"

# Math and numerics
nalgebra = "0.32"
ndarray = "0.15"
rand = "0.8"
libm = "0.2"

# Async and concurrency
futures = "0.3"
async-trait = "0.1"
channel = "1.8"

# Performance and profiling
criterion = "0.5"
pprof = { version = "0.12", features = ["flamegraph"] }

# WebAssembly
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Embedded
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"

# FFI
libc = "0.2"

# Logging and error handling
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"

# Testing
proptest = "1.4"
quickcheck = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[profile.embedded]
inherits = "release"
opt-level = "z"
lto = true
panic = "abort"