[package]
name = "shnn-async"
version = "0.1.0"
edition = "2021"
authors = ["SHNN Team"]
description = "Asynchronous processing extensions for Spiking Hypergraph Neural Networks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shnn-project/shnn"
homepage = "https://shnn-project.github.io"
documentation = "https://docs.rs/shnn-async"
keywords = ["neuromorphic", "spiking", "neural-networks", "async", "hypergraph"]
categories = ["science", "simulation", "concurrency", "asynchronous"]
readme = "README.md"

[dependencies]
# Core SHNN functionality
shnn-core = { version = "0.1.0", path = "../shnn-core" }

# Async runtime support
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "fs"], optional = true }
async-std = { version = "1.12", features = ["attributes"], optional = true }
futures = "0.3.29"
futures-util = "0.3.29"

# Channel implementations
crossbeam-channel = "0.5.8"
flume = { version = "0.11.0", optional = true }
async-channel = "2.1.0"

# Metrics and monitoring
metrics = { version = "0.21.1", optional = true }
tracing = { version = "0.1.40", optional = true }
tracing-futures = { version = "0.2.5", optional = true }

# Memory management
dashmap = "5.5.3"
parking_lot = "0.12.1"

# Serialization
serde = { version = "1.0.193", features = ["derive"], optional = true }
bincode = { version = "1.3.3", optional = true }

# Error handling
anyhow = { version = "1.0.76", optional = true }
thiserror = "1.0.50"

# Parallel processing
rayon = { version = "1.8.0", optional = true }

[dev-dependencies]
tokio-test = "0.4.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.4.0"

[features]
default = ["tokio-runtime", "metrics", "tracing"]

# Runtime selection
tokio-runtime = ["tokio"]
async-std-runtime = ["async-std"]

# Channel implementations
flume-channels = ["flume"]

# Monitoring and observability
metrics = ["dep:metrics"]
tracing = ["dep:tracing", "tracing-futures"]

# Serialization support
serde = ["dep:serde", "bincode", "shnn-core/serde"]

# Error handling
anyhow = ["dep:anyhow"]

# Parallel processing
parallel = ["rayon"]

# All features
full = [
    "tokio-runtime",
    "flume-channels", 
    "metrics",
    "tracing",
    "serde",
    "anyhow",
    "parallel"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Benchmarks and examples will be added when files are created
# [[bench]]
# name = "async_processing"
# harness = false
# required-features = ["tokio-runtime"]
#
# [[example]]
# name = "async_network"
# required-features = ["tokio-runtime", "tracing"]
#
# [[example]]
# name = "parallel_simulation"
# required-features = ["tokio-runtime", "parallel", "metrics"]
#
# [[example]]
# name = "event_driven_processing"
# required-features = ["tokio-runtime", "flume-channels"]