[package]
name = "shnn-bench"
version = "0.1.0"
edition = "2021"
authors = ["SHNN Team <team@shnn-project.org>"]
description = "Comprehensive benchmarking suite for SHNN neuromorphic computing library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shnn-project/shnn"
documentation = "https://docs.rs/shnn-bench"
keywords = ["neuromorphic", "snn", "benchmark", "performance", "hypergraph"]
categories = ["science", "simulation", "development-tools::profiling"]
readme = "README.md"

[lib]
name = "shnn_bench"
path = "src/lib.rs"

[[bin]]
name = "shnn-benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "shnn-compare"
path = "src/bin/compare.rs"

[[bin]]
name = "shnn-profile"
path = "src/bin/profile.rs"

# Benchmarks will be added when benchmark files are created
# [[bench]]
# name = "neuron_performance"
# harness = false
#
# [[bench]]
# name = "network_scalability"
# harness = false
#
# [[bench]]
# name = "spike_processing"
# harness = false
#
# [[bench]]
# name = "memory_usage"
# harness = false
#
# [[bench]]
# name = "hardware_acceleration"
# harness = false

[dependencies]
# Core SHNN dependencies
shnn-core = { path = "../shnn-core", version = "0.1.0" }
shnn-async = { path = "../shnn-async", version = "0.1.0", optional = true }
shnn-ffi = { path = "../shnn-ffi", version = "0.1.0", optional = true }
shnn-embedded = { path = "../shnn-embedded", version = "0.1.0", optional = true }

# Benchmarking framework
criterion = { version = "0.5", features = ["html_reports", "csv_output"] }
iai = "0.1"
divan = "0.1"

# Performance monitoring
pprof = { version = "0.13", features = ["criterion", "protobuf-codec"], optional = true }
jemallocator = { version = "0.5", optional = true }

# System information
sysinfo = "0.30"
psutil = "3.2"

# Statistics and analysis
statrs = "0.16"
plotters = "0.3"
ndarray = "0.15"

# Serialization and reporting
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
toml = "0.8"

# Utilities
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
indicatif = "0.17"
comfy-table = "7.1"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Async utilities (for async benchmarks)
tokio = { version = "1.0", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }

# Hardware monitoring
nvml-wrapper = { version = "0.9", optional = true }
opencl3 = { version = "0.9", optional = true }

[dev-dependencies]
tempfile = "3.8"
approx = "0.5"

[features]
default = ["std", "async", "hardware"]

# Standard library support
std = ["shnn-core/std"]

# Async processing benchmarks
async = [
    "shnn-async",
    "tokio",
    "futures",
]

# Hardware acceleration benchmarks
hardware = [
    "shnn-ffi",
    "nvml-wrapper",
    "opencl3",
]

# Embedded system benchmarks
embedded = [
    "shnn-embedded",
]

# Memory profiling
memory-profiling = [
    "jemallocator",
    "pprof",
]

# All CUDA features
cuda = [
    "shnn-ffi/cuda",
    "nvml-wrapper",
]

# All OpenCL features
opencl = [
    "shnn-ffi/opencl",
    "opencl3",
]

# FPGA benchmarks
fpga = [
    "shnn-ffi/fpga",
]

# Neuromorphic chip benchmarks
loihi = [
    "shnn-ffi/intel-loihi",
]

spinnaker = [
    "shnn-ffi/spiNNaker",
]

rram = [
    "shnn-ffi/rram",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[profile.profiling]
inherits = "release"
debug = true